# MinecraftConsoles

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE.md  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
Minecraft.Client/: ArchiveFile.cpp  CMakeLists.txt  Camera.cpp  Chunk.cpp  ClientConnection.cpp  DLCTexturePack.cpp  EnderDragonRenderer.cpp  GameRenderer.cpp  GameRenderer.h  Gui.cpp  HumanoidModel.cpp  Input.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MinecraftServer.h  PendingConnection.cpp  PlayerChunkMap.cpp  PlayerList.cpp  PlayerRenderer.cpp  ResourceLocation.h  Screen.cpp  ServerChunkCache.cpp  ServerLevel.cpp  SheepRenderer.cpp  StatsCounter.cpp  StitchedTexture.cpp  StitchedTexture.h  Texture.cpp  TileRenderer.cpp  TrackedEntity.cpp  WitherBossRenderer.cpp  extraX64client.h  stdafx.h  stubs.cpp  stubs.h
Minecraft.Client/Common/: App_structs.h  Consoles_App.cpp  Consoles_App.h  NativeRendererTypes.h  PostProcesser.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.cpp  Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCManager.cpp  DLCManager.h  DLCSkinFile.cpp
Minecraft.Client/Common/GameRules/: ConsoleGameRules.h  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  ConsoleStructureActionGenerateBox.cpp  ConsoleStructureActionGenerateBox.h  ConsoleStructureActionPlaceBlock.cpp  ConsoleStructureActionPlaceBlock.h  ConsoleStructureActionPlaceContainer.cpp  ConsoleStructureActionPlaceContainer.h  ConsoleStructureActionPlaceSpawner.cpp  ConsoleStructureActionPlaceSpawner.h  GameRuleManager.cpp  LevelGenerationOptions.cpp  LevelGenerationOptions.h
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Tutorial/: ChoiceTask.cpp  InfoTask.cpp  Tutorial.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_PauseMenu.cpp  UIBitmapFont.cpp  UIComponent_DebugUIMarketingGuide.cpp  UIControl_ButtonList.cpp  UIControl_ButtonList.h  UIControl_Slider.cpp  UIControl_TextInput.cpp  UIControl_TextInput.h  UIController.cpp  UIController.h  UILayer.cpp  UIScene.cpp  UIScene.h  UIScene_AbstractContainerMenu.cpp  UIScene_AnvilMenu.cpp  UIScene_AnvilMenu.h  UIScene_CraftingMenu.cpp  UIScene_CraftingMenu.h  UIScene_CreateWorldMenu.cpp  UIScene_CreateWorldMenu.h  UIScene_Credits.cpp  UIScene_DLCMainMenu.cpp  UIScene_DLCOffersMenu.cpp  UIScene_DeathMenu.cpp  UIScene_DebugCreateSchematic.cpp  UIScene_DebugCreateSchematic.h  UIScene_DebugSetCamera.cpp  UIScene_DebugSetCamera.h  UIScene_HUD.cpp  UIScene_InGameSaveManagementMenu.cpp  UIScene_Intro.cpp  UIScene_JoinMenu.cpp  UIScene_JoinMenu.h  UIScene_Keyboard.cpp  UIScene_Keyboard.h  UIScene_LaunchMoreOptionsMenu.cpp  UIScene_LaunchMoreOptionsMenu.h  UIScene_LoadMenu.cpp  UIScene_LoadOrJoinMenu.cpp  (+8 more)
Minecraft.Client/Common/XUI/: XUI_Scene_CraftingPanel.h
Minecraft.Client/NativeDesktop/: NativeDesktopClientApp.h  NativeDesktopClientRuntime.cpp  NativeDesktopClientSaveCatalog.h  NativeDesktopClientSaveControl.cpp  NativeDesktopClientSaveControl.h  NativeDesktopClientStorageControl.cpp  NativeDesktopClientStorageControl.h  NativeDesktopClientStubs.h  NativeDesktop_UIController.h  NativeDesktop_Xuid.h  RunNativeDesktopClientSmoke.cmake  SocialManager.h
Minecraft.Client/NativeDesktop/Legacy/: ShutdownManager.cpp
Minecraft.Client/NativeDesktop/Network/: NativeDesktopNetLayer.cpp  NativeDesktopNetLayer.h  NetworkPlayerNative.cpp  NetworkPlayerNative.h  WinsockNetLayer.cpp  WinsockNetLayer.h
Minecraft.Client/PS3/XML/: ATGXmlParser.h
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp  Windows64_Xuid.h
Minecraft.Client/Windows64/Network/: WinsockNetLayer.cpp  WinsockNetLayer.h
Minecraft.Client/Xbox/XML/: ATGXmlParser.h
Minecraft.Client/cmake/sources/: Common.cmake  NativeDesktop.cmake
Minecraft.World/: AABB.cpp  ArmorItem.cpp  Arrow.cpp  BaseMobSpawner.h  BasicTypeContainers.h  BeaconTileEntity.h  Behavior.h  BehaviorRegistry.cpp  Biome.cpp  BiomeCache.h  BiomeOverrideLayer.cpp  BiomeSource.cpp  BiomeSource.h  Blaze.cpp  Boat.cpp  BoundingBox.cpp  BucketItem.cpp  BufferedOutputStream.cpp  ByteArrayInputStream.cpp  C4JThread.cpp  CMakeLists.txt  CauldronTile.cpp  CaveSpider.cpp  ChestTile.h  Chicken.cpp  ClientSideMerchant.h  ClockItem.cpp  ClothDyeRecipes.cpp  ColoredTileItem.cpp  CombatTracker.h  Command.cpp  CommandBlockEntity.cpp  CommandBlockEntity.h  CompassItem.cpp  CompoundTag.h  Connection.cpp  ConsoleSaveFileOriginal.cpp  ContainerMenu.cpp  ControlledByPlayerGoal.h  Cow.cpp  (+134 more)
Minecraft.World/NativeDesktop/: NativeDesktopLegacyClientStubs.cpp  NativeDesktopStubs.h
Minecraft.World/cmake/sources/: Common.cmake
Minecraft.World/x64headers/: extraX64.h
Portability/: CMakeLists.txt  FilesystemSmokeTest.cpp  NativeDedicatedServerHostedGameCore.cpp  NativeDedicatedServerHostedGameCore.h  NativeDedicatedServerHostedGameHost.cpp  NativeDedicatedServerHostedGameHost.h  NativeDedicatedServerHostedGameRuntime.cpp  NativeDedicatedServerHostedGameSession.cpp  NativeDedicatedServerHostedGameSession.h  NativeDedicatedServerHostedGameStartup.cpp  NativeDedicatedServerHostedGameStartup.h  NativeDedicatedServerHostedGameThread.cpp  NativeDedicatedServerHostedGameThread.h  NativeDedicatedServerHostedGameThreadBridge.cpp  NativeDedicatedServerHostedGameThreadBridge.h  NativeDedicatedServerHostedGameWorker.cpp  NativeDedicatedServerHostedGameWorker.h  NativeDedicatedServerPlatformRuntime.cpp  NativeDedicatedServerSignalHandlers.cpp  NativeDedicatedServerWorldLoadStorage.cpp  NativeServerBootstrapMain.cpp  RunCorruptLoadedWorldBootstrap.cmake  RunLoadedWorldBootstrap.cmake  RunRemoteShellBootstrap.cmake  RunSaveReloadBootstrap.cmake  ServerPropertiesSmoke.cpp  ServerPropertiesSmoke.h  WorldCompressionSmoke.cpp  WorldCompressionSmoke.h  WorldFileHeaderSmoke.cpp  WorldFileHeaderSmoke.h  WorldSystemSmoke.cpp  WorldSystemSmoke.h
(+119 files in other folders)
